{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 102,
  "lineage": "6f94b9de-681a-386c-f705-b577cc4c439b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247450175:internet-gateway/igw-0cab390f5f46c09ad",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-047d345071dd6261d"
              }
            ],
            "id": "igw-0cab390f5f46c09ad",
            "internet_gateway_id": "igw-0cab390f5f46c09ad",
            "owner_id": "539247450175",
            "region": "eu-west-1",
            "tags": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "tpaws-dev-igw",
              "Owner": "smaail.he@kuikops.com",
              "Project": "tpaws"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247450175:vpc/vpc-047d345071dd6261d",
            "cidr_block": "50.20.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-05e7804ed9c55d629",
                "cidr_block": "50.20.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0c174fc57ab8a9a78",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-047d345071dd6261d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-050c1f910a486ae36",
            "owner_id": "539247450175",
            "region": "eu-west-1",
            "tags": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "tpaws-dev-vpc",
              "Owner": "smaail.he@kuikops.com",
              "Project": "tpaws"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247450175:route-table/rtb-00875f61244161900",
            "id": "rtb-00875f61244161900",
            "owner_id": "539247450175",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cab390f5f46c09ad",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-047d345071dd6261d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_internet_gateway.igw",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06402b72a901dc52d",
            "region": "eu-west-1",
            "route_table_id": "rtb-00875f61244161900",
            "subnet_id": "subnet-078918a630747b7f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "data.aws_internet_gateway.igw",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247450175:subnet/subnet-078918a630747b7f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "50.20.1.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078918a630747b7f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539247450175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "bei_subnet"
            },
            "tags_all": {
              "Name": "bei_subnet"
            },
            "vpc_id": "vpc-047d345071dd6261d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "subnet-078918a630747b7f1",
            "region": "eu-west-1"
          },
          "dependencies": [
            "data.aws_vpc.existing"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jenkins_master",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247450175:subnet/subnet-078918a630747b7f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "available_ip_address_count": 11,
            "cidr_block": "50.20.1.0/28",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078918a630747b7f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539247450175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "state": "available",
            "tags": {
              "Name": "bei_subnet"
            },
            "vpc_id": "vpc-047d345071dd6261d"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.jenkins_master",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01f23391a59163da9",
            "arn": "arn:aws:ec2:eu-west-1:539247450175:instance/i-05c5b33f1097ed00f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c5b33f1097ed00f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "bei2_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09c691b5b34e5cb45"
              }
            ],
            "primary_network_interface_id": "eni-09c691b5b34e5cb45",
            "private_dns": "ip-50-20-1-10.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "50.20.1.10",
            "public_dns": "ec2-34-240-2-243.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.240.2.243",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0141489830872662b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078918a630747b7f1",
            "tags": {
              "Name": "jenkins_master",
              "Role": "jenkins_controller"
            },
            "tags_all": {
              "Name": "jenkins_master",
              "Role": "jenkins_controller"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "jenkins_master",
              "Role": "jenkins_controller"
            },
            "vpc_security_group_ids": [
              "sg-0ad1c5be3dbda30c2",
              "sg-0f4145c35b7476375"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.bei_key",
            "aws_subnet.public_subnet",
            "data.aws_vpc.existing",
            "module.jenkins_master.aws_iam_instance_profile.this",
            "module.jenkins_master.aws_iam_role.this",
            "module.jenkins_master.aws_security_group.this",
            "module.jenkins_master.data.aws_iam_policy_document.assume_role_policy",
            "module.jenkins_master.data.aws_partition.current",
            "module.jenkins_master.data.aws_ssm_parameter.this",
            "module.jenkins_master.data.aws_subnet.this",
            "module.jenkins_sg.aws_security_group.this",
            "module.jenkins_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_master",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247450175:security-group/sg-0f4145c35b7476375",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f4145c35b7476375",
            "ingress": [],
            "name": "jenkins_master-20250827085838203000000006",
            "name_prefix": "jenkins_master-",
            "owner_id": "539247450175",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins_master",
              "Role": "jenkins_controller"
            },
            "tags_all": {
              "Name": "jenkins_master",
              "Role": "jenkins_controller"
            },
            "timeouts": null,
            "vpc_id": "vpc-047d345071dd6261d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "sg-0f4145c35b7476375",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "data.aws_vpc.existing",
            "module.jenkins_master.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jenkins_master",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247450175:security-group-rule/sgr-001981e8b6daa7667",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-001981e8b6daa7667",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0f4145c35b7476375",
            "security_group_rule_id": "sgr-001981e8b6daa7667",
            "tags": {
              "Name": "jenkins_master-ipv4_default",
              "Role": "jenkins_controller"
            },
            "tags_all": {
              "Name": "jenkins_master-ipv4_default",
              "Role": "jenkins_controller"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnet",
            "data.aws_vpc.existing",
            "module.jenkins_master.aws_security_group.this",
            "module.jenkins_master.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247450175:security-group-rule/sgr-04932d5544377dc9b",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-04932d5544377dc9b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0f4145c35b7476375",
            "security_group_rule_id": "sgr-04932d5544377dc9b",
            "tags": {
              "Name": "jenkins_master-ipv6_default",
              "Role": "jenkins_controller"
            },
            "tags_all": {
              "Name": "jenkins_master-ipv6_default",
              "Role": "jenkins_controller"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnet",
            "data.aws_vpc.existing",
            "module.jenkins_master.aws_security_group.this",
            "module.jenkins_master.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247450175:security-group/sg-0ad1c5be3dbda30c2",
            "description": "Allow SSH, HTTP, Jenkins UI (8080) and JNLP agent (50000); all egress",
            "egress": [],
            "id": "sg-0ad1c5be3dbda30c2",
            "ingress": [],
            "name": "sg_ansible-20250827085827074100000001",
            "name_prefix": "sg_ansible-",
            "owner_id": "539247450175",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_ansible"
            },
            "tags_all": {
              "Name": "sg_ansible"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-047d345071dd6261d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "sg-0ad1c5be3dbda30c2",
            "region": "eu-west-1"
          },
          "dependencies": [
            "data.aws_vpc.existing"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jenkins_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3132911863",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "region": "eu-west-1",
            "security_group_id": "sg-0ad1c5be3dbda30c2",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.existing",
            "module.jenkins_sg.aws_security_group.this",
            "module.jenkins_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 22,
            "id": "sgrule-2547265892",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-0ad1c5be3dbda30c2",
            "security_group_rule_id": "sgr-01398c2e886e095ce",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.existing",
            "module.jenkins_sg.aws_security_group.this",
            "module.jenkins_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 80,
            "id": "sgrule-559836369",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-0ad1c5be3dbda30c2",
            "security_group_rule_id": "sgr-06b85ec3274819d3a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.existing",
            "module.jenkins_sg.aws_security_group.this",
            "module.jenkins_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 8080,
            "id": "sgrule-1649008808",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-0ad1c5be3dbda30c2",
            "security_group_rule_id": "sgr-0367779b3ea6f86a8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.existing",
            "module.jenkins_sg.aws_security_group.this",
            "module.jenkins_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 50000,
            "id": "sgrule-1835710347",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-0ad1c5be3dbda30c2",
            "security_group_rule_id": "sgr-03a3d3594dbc9639d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 50000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.existing",
            "module.jenkins_sg.aws_security_group.this",
            "module.jenkins_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_slave1",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247450175:subnet/subnet-078918a630747b7f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "available_ip_address_count": 11,
            "cidr_block": "50.20.1.0/28",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078918a630747b7f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539247450175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "state": "available",
            "tags": {
              "Name": "bei_subnet"
            },
            "vpc_id": "vpc-047d345071dd6261d"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.jenkins_slave1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01f23391a59163da9",
            "arn": "arn:aws:ec2:eu-west-1:539247450175:instance/i-01f1391b3e90effa2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01f1391b3e90effa2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "bei2_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ea3b20d688af3e56"
              }
            ],
            "primary_network_interface_id": "eni-0ea3b20d688af3e56",
            "private_dns": "ip-50-20-1-6.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "50.20.1.6",
            "public_dns": "ec2-54-194-185-86.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.194.185.86",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08579742724a572d7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078918a630747b7f1",
            "tags": {
              "Name": "jenkins_slave1",
              "Role": "jenkins_agent"
            },
            "tags_all": {
              "Name": "jenkins_slave1",
              "Role": "jenkins_agent"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "jenkins_slave1",
              "Role": "jenkins_agent"
            },
            "vpc_security_group_ids": [
              "sg-0ad1c5be3dbda30c2",
              "sg-0cbf4ce59d85aca50"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.bei_key",
            "aws_subnet.public_subnet",
            "data.aws_vpc.existing",
            "module.jenkins_sg.aws_security_group.this",
            "module.jenkins_sg.aws_security_group.this_name_prefix",
            "module.jenkins_slave1.aws_iam_instance_profile.this",
            "module.jenkins_slave1.aws_iam_role.this",
            "module.jenkins_slave1.aws_security_group.this",
            "module.jenkins_slave1.data.aws_iam_policy_document.assume_role_policy",
            "module.jenkins_slave1.data.aws_partition.current",
            "module.jenkins_slave1.data.aws_ssm_parameter.this",
            "module.jenkins_slave1.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_slave1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247450175:security-group/sg-0cbf4ce59d85aca50",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0cbf4ce59d85aca50",
            "ingress": [],
            "name": "jenkins_slave1-20250827085838118400000005",
            "name_prefix": "jenkins_slave1-",
            "owner_id": "539247450175",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins_slave1",
              "Role": "jenkins_agent"
            },
            "tags_all": {
              "Name": "jenkins_slave1",
              "Role": "jenkins_agent"
            },
            "timeouts": null,
            "vpc_id": "vpc-047d345071dd6261d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "sg-0cbf4ce59d85aca50",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "data.aws_vpc.existing",
            "module.jenkins_slave1.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jenkins_slave1",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247450175:security-group-rule/sgr-000e4849d6a6e1390",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-000e4849d6a6e1390",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0cbf4ce59d85aca50",
            "security_group_rule_id": "sgr-000e4849d6a6e1390",
            "tags": {
              "Name": "jenkins_slave1-ipv4_default",
              "Role": "jenkins_agent"
            },
            "tags_all": {
              "Name": "jenkins_slave1-ipv4_default",
              "Role": "jenkins_agent"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnet",
            "data.aws_vpc.existing",
            "module.jenkins_slave1.aws_security_group.this",
            "module.jenkins_slave1.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247450175:security-group-rule/sgr-03b44a8932da9c109",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-03b44a8932da9c109",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0cbf4ce59d85aca50",
            "security_group_rule_id": "sgr-03b44a8932da9c109",
            "tags": {
              "Name": "jenkins_slave1-ipv6_default",
              "Role": "jenkins_agent"
            },
            "tags_all": {
              "Name": "jenkins_slave1-ipv6_default",
              "Role": "jenkins_agent"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnet",
            "data.aws_vpc.existing",
            "module.jenkins_slave1.aws_security_group.this",
            "module.jenkins_slave1.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_slave2",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247450175:subnet/subnet-078918a630747b7f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "available_ip_address_count": 11,
            "cidr_block": "50.20.1.0/28",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078918a630747b7f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539247450175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "state": "available",
            "tags": {
              "Name": "bei_subnet"
            },
            "vpc_id": "vpc-047d345071dd6261d"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.jenkins_slave2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01f23391a59163da9",
            "arn": "arn:aws:ec2:eu-west-1:539247450175:instance/i-00e44f988fb260a6c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e44f988fb260a6c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "bei2_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-099a44c3bda309de1"
              }
            ],
            "primary_network_interface_id": "eni-099a44c3bda309de1",
            "private_dns": "ip-50-20-1-12.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "50.20.1.12",
            "public_dns": "ec2-108-130-153-254.eu-west-1.compute.amazonaws.com",
            "public_ip": "108.130.153.254",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c5510dfd6fa4b5b8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078918a630747b7f1",
            "tags": {
              "Name": "jenkins_slave2",
              "Role": "jenkins_agent"
            },
            "tags_all": {
              "Name": "jenkins_slave2",
              "Role": "jenkins_agent"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "jenkins_slave2",
              "Role": "jenkins_agent"
            },
            "vpc_security_group_ids": [
              "sg-0967c6897e301425f",
              "sg-0ad1c5be3dbda30c2"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.bei_key",
            "aws_subnet.public_subnet",
            "data.aws_vpc.existing",
            "module.jenkins_sg.aws_security_group.this",
            "module.jenkins_sg.aws_security_group.this_name_prefix",
            "module.jenkins_slave2.aws_iam_instance_profile.this",
            "module.jenkins_slave2.aws_iam_role.this",
            "module.jenkins_slave2.aws_security_group.this",
            "module.jenkins_slave2.data.aws_iam_policy_document.assume_role_policy",
            "module.jenkins_slave2.data.aws_partition.current",
            "module.jenkins_slave2.data.aws_ssm_parameter.this",
            "module.jenkins_slave2.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_slave2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247450175:security-group/sg-0967c6897e301425f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0967c6897e301425f",
            "ingress": [],
            "name": "jenkins_slave2-20250827085838112700000003",
            "name_prefix": "jenkins_slave2-",
            "owner_id": "539247450175",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins_slave2",
              "Role": "jenkins_agent"
            },
            "tags_all": {
              "Name": "jenkins_slave2",
              "Role": "jenkins_agent"
            },
            "timeouts": null,
            "vpc_id": "vpc-047d345071dd6261d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "sg-0967c6897e301425f",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "data.aws_vpc.existing",
            "module.jenkins_slave2.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jenkins_slave2",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247450175:security-group-rule/sgr-052e37c54c1992dbb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-052e37c54c1992dbb",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0967c6897e301425f",
            "security_group_rule_id": "sgr-052e37c54c1992dbb",
            "tags": {
              "Name": "jenkins_slave2-ipv4_default",
              "Role": "jenkins_agent"
            },
            "tags_all": {
              "Name": "jenkins_slave2-ipv4_default",
              "Role": "jenkins_agent"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnet",
            "data.aws_vpc.existing",
            "module.jenkins_slave2.aws_security_group.this",
            "module.jenkins_slave2.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247450175:security-group-rule/sgr-053227558e15d8451",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-053227558e15d8451",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0967c6897e301425f",
            "security_group_rule_id": "sgr-053227558e15d8451",
            "tags": {
              "Name": "jenkins_slave2-ipv6_default",
              "Role": "jenkins_agent"
            },
            "tags_all": {
              "Name": "jenkins_slave2-ipv6_default",
              "Role": "jenkins_agent"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnet",
            "data.aws_vpc.existing",
            "module.jenkins_slave2.aws_security_group.this",
            "module.jenkins_slave2.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_slave3",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247450175:subnet/subnet-078918a630747b7f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "available_ip_address_count": 11,
            "cidr_block": "50.20.1.0/28",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078918a630747b7f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539247450175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "state": "available",
            "tags": {
              "Name": "bei_subnet"
            },
            "vpc_id": "vpc-047d345071dd6261d"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.jenkins_slave3",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01f23391a59163da9",
            "arn": "arn:aws:ec2:eu-west-1:539247450175:instance/i-05a8ded02692db646",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05a8ded02692db646",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "bei2_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03a82981985e284c4"
              }
            ],
            "primary_network_interface_id": "eni-03a82981985e284c4",
            "private_dns": "ip-50-20-1-4.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "50.20.1.4",
            "public_dns": "ec2-3-253-17-132.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.253.17.132",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-096b14a7472730b67",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078918a630747b7f1",
            "tags": {
              "Name": "jenkins_slave3",
              "Role": "jenkins_agent"
            },
            "tags_all": {
              "Name": "jenkins_slave3",
              "Role": "jenkins_agent"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "jenkins_slave3",
              "Role": "jenkins_agent"
            },
            "vpc_security_group_ids": [
              "sg-07ea57a2502f8921d",
              "sg-0ad1c5be3dbda30c2"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.bei_key",
            "aws_subnet.public_subnet",
            "data.aws_vpc.existing",
            "module.jenkins_sg.aws_security_group.this",
            "module.jenkins_sg.aws_security_group.this_name_prefix",
            "module.jenkins_slave3.aws_iam_instance_profile.this",
            "module.jenkins_slave3.aws_iam_role.this",
            "module.jenkins_slave3.aws_security_group.this",
            "module.jenkins_slave3.data.aws_iam_policy_document.assume_role_policy",
            "module.jenkins_slave3.data.aws_partition.current",
            "module.jenkins_slave3.data.aws_ssm_parameter.this",
            "module.jenkins_slave3.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_slave3",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247450175:security-group/sg-07ea57a2502f8921d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07ea57a2502f8921d",
            "ingress": [],
            "name": "jenkins_slave3-20250827085838118400000004",
            "name_prefix": "jenkins_slave3-",
            "owner_id": "539247450175",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins_slave3",
              "Role": "jenkins_agent"
            },
            "tags_all": {
              "Name": "jenkins_slave3",
              "Role": "jenkins_agent"
            },
            "timeouts": null,
            "vpc_id": "vpc-047d345071dd6261d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "sg-07ea57a2502f8921d",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "data.aws_vpc.existing",
            "module.jenkins_slave3.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jenkins_slave3",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247450175:security-group-rule/sgr-02b2a97300d715e59",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-02b2a97300d715e59",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-07ea57a2502f8921d",
            "security_group_rule_id": "sgr-02b2a97300d715e59",
            "tags": {
              "Name": "jenkins_slave3-ipv4_default",
              "Role": "jenkins_agent"
            },
            "tags_all": {
              "Name": "jenkins_slave3-ipv4_default",
              "Role": "jenkins_agent"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnet",
            "data.aws_vpc.existing",
            "module.jenkins_slave3.aws_security_group.this",
            "module.jenkins_slave3.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:539247450175:security-group-rule/sgr-0ffaecf7c6242aeea",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-0ffaecf7c6242aeea",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-07ea57a2502f8921d",
            "security_group_rule_id": "sgr-0ffaecf7c6242aeea",
            "tags": {
              "Name": "jenkins_slave3-ipv6_default",
              "Role": "jenkins_agent"
            },
            "tags_all": {
              "Name": "jenkins_slave3-ipv6_default",
              "Role": "jenkins_agent"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnet",
            "data.aws_vpc.existing",
            "module.jenkins_slave3.aws_security_group.this",
            "module.jenkins_slave3.data.aws_subnet.this"
          ]
        }
      ]
    }
  ]
}